[PORT] Updated data generation code to support 1.21.4